[package]
name = "algohub-server"
version = "0.1.5"
edition = "2021"
description = "Extremely fast async online judge backend based on Rust"
readme = "README.md"
homepage = "https://github.com/swpu-acm/online-judge"
repository = "https://github.com/swpu-acm/online-judge"
authors = ["苏向夜 <fu050409@163.com>"]
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.92"
chrono = { version = "0.4.38", features = ["serde"] }
eval-stack = { version = "0.1.1", features = ["serde"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
surrealdb = "2.1.0"
uuid = { version = "1.11.0", features = ["v4"] }
